# Speech2Touch

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  Speech2Touch.ioc  audio_capture.py  bin_to_wav.py
AZURE_RTOS/App/: app_azure_rtos.c  app_azure_rtos_config.h
Core/Inc/: RTE_Components.h  audio.h  led.h  main.h  sai.h  speech.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h  stm32wbxx_nucleo_conf.h  touch.h  touch_mapper.h  touch_targets.h
Core/Lib/log/: log.c  log.h
Core/Lib/picovoice/include/: Franke-A600.yml  pv_params.h  pv_porcupine_params.h  pv_rhino_params.h
Core/Src/: app_threadx.c  audio.c  gpio.c  led.c  main.c  sai.c  speech.c  stm32wbxx_hal_timebase_tim.c  stm32wbxx_it.c  touch.c  touch_mapper.c  touch_targets.c  usart.c  usb.c
Test/: CMakeLists.txt
Test/hil/: CMakeLists.txt  Franke-A600.ui  main.cpp  mainwindow.cpp  mainwindow.h
Test/hil/harness_gui/: CMakeLists.txt  Franke-A600.ui  mainwindow.cpp  mainwindow.h  touch_event_parser.cpp  touch_event_parser.h
Test/hil/runner/: CMakeLists.txt  test_full_loop.cpp
Test/hil/target_gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Test/hil/tests/: CMakeLists.txt
Test/hil/tts/: CMakeLists.txt  tts.cpp  tts.h
Test/unit/: CMakeLists.txt
USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_customhid.c  ux_device_descriptors.c  ux_device_descriptors.h  ux_user.h
USB_Device/App/: usbd_custom_hid_if.c  usbd_desc.c
cmake/stm32cubemx/: CMakeLists.txt
